--- a/src/classes/C501_SM_UnMerge_Controller.cls
+++ b/src/classes/C501_SM_UnMerge_Controller.cls
@@ -1,124 +1,181 @@
 public class C501_SM_UnMerge_Controller {
 
-    private final Account unmergeAccount;
+    private final Account unMergeAccount;
     
     public C501_SM_UnMerge_Controller(ApexPages.StandardController stdController) {
-        this.unmergeAccount = (Account)stdController.getRecord();
+        this.unMergeAccount = (Account)stdController.getRecord();
     }
 
     public PageReference autoRun() {
 
-        // Perform UnMerge
-        Id unMergeAccountId = this.unmergeAccount.Id;
+        Account unMergeAccount = [SELECT Id, Name FROM Account WHERE Id = :this.unMergeAccount.Id LIMIT 1];
 
-        // Ignore Change Requests and Service Households that do not have any Service Contacts
+        // Unmerge all the Service Households
+        List<C501_Service_Household__c> serviceHouseholds = this.UnMergeServiceHouseholds(unMergeAccount);
+
+        // Unmerge all the Service Contacts
+        this.UnMergeServiceContacts(unMergeAccount, serviceHouseholds);
+
+        // Trigger reload original account page
+        PageReference accountPage = new PageReference('/' + unMergeAccount.Id);
+        accountPage.setRedirect(true);
+        return accountPage;
+    }
+
+    //
+    //  UnMergeServiceHouseholds
+    //      params: unMergeAccount - the Account to unmerge
+    //      return: List<C501_Service_Household__c> - list of all the created Service Households
+    //
+    private List<C501_Service_Household__c> UnMergeServiceHouseholds(Account unMergeAccount) {
+
+        // Get related Service Households
+        //
         String strSoql = 'SELECT Id, Name, C501_Household__c, C501_Service_Id__c';
         strSoql += ' FROM C501_Service_Household__c';
-        strSoql += ' WHERE C501_Household__c = :unMergeAccountId and (NOT Name like \'Change Request%\') and C501_Household_Size__c >= 1.0';
+        strSoql += ' WHERE C501_Household__c = \'' + String.valueOf(unMergeAccount.Id) + '\' and (NOT Name like \'Change Request%\')';
         strSoql += ' ORDER BY C501_Start_Date__c DESC';
-        List<C501_Service_Household__c> serviceHouseholds = Database.Query(strSoql);
+        System.debug(LoggingLevel.DEBUG, '*****C501_SM_UnMerge_Controller::UnMergeServiceHouseholds strSoql: ' + strSoql);
 
-        Set<Id> serviceHouseholdIds = new Set<Id>();
-        for (C501_Service_Household__c serviceHousehold :serviceHouseholds) {
-            serviceHouseholdIds.add(serviceHousehold.Id);
+        Map<Id, C501_Service_Household__c> serviceHouseholdsMap = new Map<Id, C501_Service_Household__c>();
+        for (C501_Service_Household__c serviceHousehold : Database.Query(strSoql)) {
+            serviceHouseholdsMap.put(serviceHousehold.Id, serviceHousehold);
         }
 
-        // Build list of all service contacts by service household
-        Map<Id, Set<C501_Service_Contact__c>> serviceContacts = new Map<Id, Set<C501_Service_Contact__c>>();
-        for (C501_Service_Contact__c serviceContact : [
-            SELECT Id, C501_Last_Name__c, C501_Service_Household_Id__c, C501_Contact__c
-            FROM C501_Service_Contact__c
-            WHERE C501_Service_Household_Id__c in :serviceHouseholdIds]) {
-
-            if (serviceContacts.containsKey(serviceContact.C501_Service_Household_Id__c)) {
-                Set<C501_Service_Contact__c> existingServiceContacts = serviceContacts.remove(serviceContact.C501_Service_Household_Id__c);
-                existingServiceContacts.add(serviceContact);
-                serviceContacts.put(serviceContact.C501_Service_Household_Id__c, existingServiceContacts);
-            }
-            else {
-                serviceContacts.put(serviceContact.C501_Service_Household_Id__c, new Set<C501_Service_Contact__c> { serviceContact });
-            }
+        if (serviceHouseholdsMap.values().isEmpty()) {
+            return new List<C501_Service_Household__c>();
         }
 
         // Create new households so each household has a single service household
-        Map<Id, Account> newHouseholds = new Map<Id, Account>();
-        Id skippedServiceHouseholdId = null;
-        Integer uniqueIndex = 0;
-        for (C501_Service_Household__c serviceHousehold :serviceHouseholds) {
+        //
+        this.unMergeAccount.C501_Service_Id__c = null;
+        Map<Id, Account> insertHouseholds = new Map<Id, Account>();
+        for (C501_Service_Household__c serviceHousehold :serviceHouseholdsMap.values()) {
 
-            if (skippedServiceHouseholdId == null) {
-                skippedServiceHouseholdId = serviceHousehold.Id;
+            // Keep the most recent Service Household on the incoming unmerge Account
+            if (this.unMergeAccount.C501_Service_Id__c == null) {
+
+                this.unMergeAccount.C501_Service_Id__c = serviceHousehold.Id;
+                update unMergeAccount;
+
                 continue;
             }
 
-            newHouseholds.put(
+            insertHouseholds.put(
                 serviceHousehold.Id,
                 new Account(
-                    Name = serviceHousehold.Name,
-                    C501_Service_Id__c = serviceHousehold.C501_Service_Id__c + String.valueOf(uniqueIndex++)));
+                    Name = unMergeAccount.Name,
+                    C501_Service_Id__c = serviceHousehold.Id));
         }
 
-        if (!newHouseholds.values().isEmpty()) {
-            insert newHouseholds.values();
+        if (!insertHouseholds.values().isEmpty()) {
+            insert insertHouseholds.values();
         }
 
         // Update service household reference to the new household
-        for (C501_Service_Household__c serviceHousehold :serviceHouseholds) {
-            if (newHouseholds.containsKey(serviceHousehold.Id)) {
-                serviceHousehold.C501_Household__c = newHouseholds.get(serviceHousehold.Id).Id;
-            }
+        List<C501_Service_Household__c> updateServiceHouseholds = new List<C501_Service_Household__c>();
+        for (Id serviceHouseholdId :insertHouseholds.keySet()) {
+            updateServiceHouseholds.add(new C501_Service_Household__c(
+                Id = serviceHouseholdId,
+                C501_Household__c = insertHouseholds.get(serviceHouseholdId).Id));
         }
 
-        if (!serviceHouseholds.isEmpty()) {
-            update serviceHouseholds;
+        if (!updateServiceHouseholds.isEmpty()) {
+            update updateServiceHouseholds;
         }
 
-        // Create new contact(s) in the new household(s)
-        Map<Id, Contact> newContacts = new Map<Id, Contact>();
+        return updateServiceHouseholds;
+    }
+
+    //
+    //  UnMergeServiceContacts
+    //      params: serviceHouseholds - list of all service households that were created during the unmerge
+    //      return: void
+    //
+    private void UnMergeServiceContacts(Account unMergeAccount, List<C501_Service_Household__c> serviceHouseholds) {
+
+        if (serviceHouseholds.isEmpty()) {
+            return;
+        }
+
+        List<String> serviceHouseholdIds = new List<String>();
         for (C501_Service_Household__c serviceHousehold :serviceHouseholds) {
+            serviceHouseholdIds.add((String)serviceHousehold.Id);
+        }
 
-            if (skippedServiceHouseholdId == serviceHousehold.Id) {
-                continue;
-            }
+        String safeSoqlList = '(\'' + String.join(serviceHouseholdIds, '\',\'') + '\')';
 
-            if (serviceContacts.containsKey(serviceHousehold.Id))
-            {
-                for (C501_Service_Contact__c serviceContact :serviceContacts.get(serviceHousehold.Id)) {
+        // Get related Service Contacts
+        //
+        String strSoql = 'SELECT Id, Name, C501_Last_Name__c, C501_First_Name__c, ';
+        strSoql += ' C501_Contact__c, C501_Contact_Id__c,';
+        strSoql += ' C501_Service_Household_Id__c, C501_Service_Id__c';
+        strSoql += ' FROM C501_Service_Contact__c';
+        strSoql += ' WHERE C501_Service_Household_Id__c in ' + safeSoqlList;
+        strSoql += ' ORDER BY CreatedDate DESC';
+        System.debug(LoggingLevel.DEBUG, '*****C501_SM_UnMerge_Controller::UnMergeServiceContacts strSoql: ' + strSoql);
 
-                    newContacts.put(
-                        serviceContact.Id,
-                        new Contact(
-                            LastName = serviceContact.C501_Last_Name__c,
-                            AccountId = serviceHousehold.C501_Household__c
+        Map<Id, C501_Service_Contact__c> serviceContactsMap = new Map<Id, C501_Service_Contact__c>();
+        Map<Id, Id> serviceHouseholdMap = new Map<Id, Id>();
+        for (C501_Service_Contact__c serviceContact : Database.Query(strSoql)) {
 
-                            // Why do you even have these fields? - should be removed because they mean nothing after merging
-                            //C501_Contact_Id__c = serviceContact.Id,
-                            //C501_Service_Id__c = serviceHousehold.Id
-                            ));
+            serviceContactsMap.put(serviceContact.Id, serviceContact);
+
+            for (C501_Service_Household__c serviceHousehold : serviceHouseholds) {
+                if (serviceHousehold.Id == serviceContact.C501_Service_Household_Id__c) {
+                    serviceHouseholdMap.put(serviceContact.C501_Service_Household_Id__c, serviceHousehold.C501_Household__c);
+                    break;
                 }
             }
         }
 
-        if (!newContacts.values().isEmpty()) {
-            insert newContacts.values();
+        if (serviceContactsMap.values().isEmpty()) {
+            return;
         }
 
-        // Update service contact with new contact id
+        // Create new Contacts for each Service Contact
+        //
+        Map<Id, Contact> insertContactsMap = new Map<Id, Contact>();
+        Map<Id, Account> updateAccountsMap = new Map<Id, Account>();
+        for (C501_Service_Contact__c serviceContact :serviceContactsMap.values()) {
+
+            Id accountId = serviceHouseholdMap.get(serviceContact.C501_Service_Household_Id__c);
+
+            insertContactsMap.put(
+                serviceContact.Id,
+                new Contact(
+                    LastName = serviceContact.C501_Last_Name__c,
+                    FirstName = serviceContact.C501_First_Name__c,
+                    AccountId = accountId,
+                    C501_Contact_Id__c = serviceContact.Id));
+
+            updateAccountsMap.put(
+                accountId,
+                new Account(
+                    Id = accountId,
+                    Name = unMergeAccount.Name
+            ));
+        }
+
+        if (!insertContactsMap.values().isEmpty()) {
+            insert insertContactsMap.values();
+        }
+
+        // Propegate Account name from unMerge Account
+        if (!updateAccountsMap.values().isEmpty()) {
+            update updateAccountsMap.values();
+        }
+
+        // Update Service Contact reference to the new Contact
         List<C501_Service_Contact__c> updateServiceContacts = new List<C501_Service_Contact__c>();
-        for (Id serviceContactId :newContacts.keyset()) {
+        for (Id serviceContactId :insertContactsMap.keySet()) {
             updateServiceContacts.add(new C501_Service_Contact__c(
                 Id = serviceContactId,
-                C501_Contact__c = newContacts.get(serviceContactId).Id
-            ));
+                C501_Contact__c = insertContactsMap.get(serviceContactId).Id));
         }
 
         if (!updateServiceContacts.isEmpty()) {
             update updateServiceContacts;
         }
-
-        // Trigger reload original account page
-        PageReference accountPage = new PageReference('/' + this.unmergeAccount.Id);
-        accountPage.setRedirect(true);
-        return accountPage;
-    }
+    }    
 }
